Refactor